--- a/assets/css/sections/main-nav.scss
+++ b/assets/css/sections/main-nav.scss
@@ -1,6 +1,6 @@
 .main-nav{
   width: 100%;
-  padding: 0 1em;
+  padding: 0 2em;
   display: flex;
   justify-content: space-between;
   flex-direction: row;
@@ -17,6 +17,9 @@
     }
 
     @include clearfix;
+    @include tablet{
+      padding-top: 3em;
+    }
   }
 
   ul{
